--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t rachitsxn292/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run rachitsxn292/react-test npm test -- --coverage
+  - docker run -e CI=true rachitsxn292/react-test npm test
 
 after_success:
   - docker build -t rachitsxn292/multi-client ./client 
