--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,3 +41,14 @@ services:
       - /app/node_modules
       - ./worker:/app
     
+deploy: 
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-583033153236
+  bucket_path: docker_multi
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
